<resources>
    <string name="app_name">Prof Goethe</string>
    <string name="action_settings">Ustawienia</string>
    <string-array name="choices_array">
        <item>A1.1.</item>
        <item>A1.2.</item>
        <item>A2.1.</item>
        <item>A2.2.</item>
        <item>B1.1.</item>
        <item>B1.2.</item>
        <item>B1.3.</item>
    </string-array>
    <string name="title_activity_a11">A1.1.</string>
    <string name="title_activity_a12">A1.2.</string>
    <string name="title_activity_a21">A2.1</string>
    <string name="title_activity_a22">A2.2.</string>
    <string name="title_activity_b11">B1.1</string>
    <string name="title_activity_b12">B1.2.</string>
    <string name="title_activity_b13">B1.3.</string>
    <string-array name="sliding_drawer_array_a11">
        <item>A1.1. Topics</item>
        <item>Kapitel 01</item>
        <item>Kapitel 02</item>
        <item>Kapitel 03</item>
        <item>Kapitel 04</item>
        <item>Kapitel 05</item>
        <item>Kapitel 06</item>
        <item>Kapitel 07</item>
        <item>Kapitel 08</item>
        <item>Kapitel 09</item>
        <item>Kapitel 10</item>
        <item>Kapitel 11</item>
        <item>Kapitel 12</item>
    </string-array>
    <string-array name="sliding_drawer_array_a12">
        <item>A1.2. Topics</item>
        <item>Kapitel 13</item>
        <item>Kapitel 14</item>
        <item>Kapitel 15</item>
        <item>Kapitel 16</item>
        <item>Kapitel 17</item>
        <item>Kapitel 18</item>
        <item>Kapitel 19</item>
        <item>Kapitel 20</item>
        <item>Kapitel 21</item>
        <item>Kapitel 22</item>
        <item>Kapitel 23</item>
        <item>Kapitel 24</item>
    </string-array>
    <string-array name="sliding_drawer_array_a21">
        <item>A2.1. Topics</item>
        <item>Kapitel 01</item>
        <item>Kapitel 02</item>
        <item>Kapitel 03</item>
        <item>Kapitel 04</item>
        <item>Kapitel 05</item>
        <item>Kapitel 06</item>
        <item>Kapitel 07</item>
        <item>Kapitel 08</item>
        <item>Kapitel 09</item>
        <item>Kapitel 10</item>
        <item>Kapitel 11</item>
        <item>Kapitel 12</item>
    </string-array>
    <string-array name="sliding_drawer_array_a22">
        <item>A2.2. Topics</item>
        <item>Kapitel 13</item>
        <item>Kapitel 14</item>
        <item>Kapitel 15</item>
        <item>Kapitel 16</item>
        <item>Kapitel 17</item>
        <item>Kapitel 18</item>
        <item>Kapitel 19</item>
        <item>Kapitel 20</item>
        <item>Kapitel 21</item>
        <item>Kapitel 22</item>
        <item>Kapitel 23</item>
        <item>Kapitel 24</item>
    </string-array>
    <string-array name="sliding_drawer_array_b11">
        <item>B1.1. Topics</item>
        <item>Kapitel 01</item>
        <item>Kapitel 02</item>
        <item>Kapitel 03</item>
        <item>Kapitel 04</item>
        <item>Kapitel 05</item>
        <item>Kapitel 06</item>
        <item>Kapitel 07</item>
        <item>Kapitel 08</item>
        <item>Kapitel 09</item>
        <item>Kapitel 10</item>
        <item>Kapitel 11</item>
        <item>Kapitel 12</item>
    </string-array>
    <string-array name="sliding_drawer_array_b12">
        <item>B1.2. Topics</item>
        <item>Kapitel 13</item>
        <item>Kapitel 14</item>
        <item>Kapitel 15</item>
        <item>Kapitel 16</item>
        <item>Kapitel 17</item>
        <item>Kapitel 18</item>
        <item>Kapitel 19</item>
        <item>Kapitel 20</item>
        <item>Kapitel 21</item>
        <item>Kapitel 22</item>
        <item>Kapitel 23</item>
        <item>Kapitel 24</item>
    </string-array>
    <string-array name="sliding_drawer_array_b13">
        <item>B1.3. Topics</item>
        <item>Kapitel 01</item>
        <item>Kapitel 02</item>
        <item>Kapitel 03</item>
        <item>Kapitel 04</item>
        <item>Kapitel 05</item>
        <item>Kapitel 06</item>
        <item>Kapitel 07</item>
        <item>Kapitel 08</item>
        <item>Kapitel 09</item>
        <item>Kapitel 10</item>
        <item>Kapitel 11</item>
        <item>Kapitel 12</item>
    </string-array>
    <string name="skrot_nominativ">N</string>
    <string name="skrot_genitiv">G</string>
    <string name="skrot_dativ">D</string>
    <string name="skrot_akkusativ">A</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_navigation_drawer_a11">A1.1.</string>
    <string name="title_activity_navigation_drawer_a12">A1.2.</string>
    <string name="title_activity_navigation_drawer_a21">A2.1.</string>
    <string name="title_activity_navigation_drawer_a22">A2.2.</string>
    <string name="title_activity_navigation_drawer_b11">B1.1.</string>
    <string name="title_activity_navigation_drawer_b12">B1.2.</string>
    <string name="title_activity_navigation_drawer_b13">B1.3.</string>
    <string name="drawer_open">Otwórz panel nawigacji</string>
    <string name="drawer_close">Zamknij panel nawigacji</string>
    <string name="red_fragment">To jest CZERWONY fragment</string>
    <string name="yelloe_fragment">To jest ŹÓŁTY fragment</string>
    <string name="green_fragment">To jest ZIELONY fragment</string>
    <string name="blue_fragment">To jest NIEBIESKI fragment</string>
    <string name="a11_fragment">A11</string>
    <string name="poziom_jezykowy_sluchanie">Słuchanie</string>
    <string name="poziom_jezykowy_czytanie">Czytanie</string>
    <string name="poziom_jezykowy_porozumiewanie">Porozumiewanie się</string>
    <string name="poziom_jezykowy_wypowiadanie">Samodzielne wypowiadanie się</string>
    <string name="poziom_jezykowy_pisanie">Pisanie</string>
    <string name="a1_sluchanie">Potrafię zrozumieć znane mi słowa i bardzo podstawowe wyrażenia
        dotyczące mnie osobiście, mojej rodziny i bezpośredniego otoczenia, gdy tempo wypowiedzi
        jest wolne a wymowa wyraźna.</string>
    <string name="a1_czytanie">Rozumiem znane nazwy, słowa i bardzo proste zdania, np.: na
        tablicach informacyjnych i plakatach lub w katalogach.</string>
    <string name="a1_porozumiewanie">Potrafię brać udział w rozmowie pod warunkiem, że rozmówca
        jest gotów powtarzać lub inaczej formułować swoje myśli, mówiąc wolniej oraz pomagając mi
        ująć w słowa to, co usiłuję opowiedzieć. Potrafię formułować proste pytania dotyczące
        najlepiej mi znanych tematów lub najpotrzebniejszych spraw – i odpowiadać na tego typu
        pytania.</string>
    <string name="a1_wypowiadanie">Potrafię używać prostych wyrażeń i zdań, aby opisać miejsce,
        gdzie mieszkam oraz ludzi, których znam.</string>
    <string name="a1_pisanie">Potrafię napisać krótki, prosty tekst na widokówce, np. z
        pozdrowieniami z wakacji. Potrafię wypełniać formularze (np. w hotelu) z danymi osobowymi,
        takimi jak nazwisko, adres, obywatelstwo. </string>
    <string name="gramatyka">GRAMMATIK</string>
    <string name="pusty" />
    <string name="punkt">&#8226;&#8194;</string>
    <string name="komunikacja">KOMMUNIKATION</string>
    <string name="kap01_gram_tem1">Verb: Konjugation</string>
    <string name="kap01_gram_tem1_rz1" />
    <string name="kap01_gram_tem1_rz2">kommen</string>
    <string name="kap01_gram_tem1_rz3">hei&#223;en</string>
    <string name="kap01_gram_tem1_rz4">sein</string>
    <string name="kap01_kom_tem1">Name</string>
    <string name="kap01_kom_tem1_rz1">Wie hei&#223;en Sie? / Wie hei&#223;t du?</string>
    <string name="kap01_gram_tem1_rz5">ich</string>
    <string name="kap01_gram_tem1_rz6">komme</string>
    <string name="kap01_gram_tem1_rz7">hei&#223;e</string>
    <string name="kap01_gram_tem1_rz8">bin</string>
    <string name="kap01_gram_tem1_rz9">du</string>
    <string name="kap01_gram_tem1_rz10">kommst</string>
    <string name="kap01_gram_tem1_rz11">hei&#223;t</string>
    <string name="kap01_gram_tem1_rz12">bist</string>
    <string name="kap01_gram_tem1_rz13">Sie</string>
    <string name="kap01_gram_tem1_rz14">kommen</string>
    <string name="kap01_gram_tem1_rz15">hei&#223;en</string>
    <string name="kap01_gram_tem1_rz16">sind</string>
    <string name="kap01_gram_tem1_rz17">er / sie / es</string>
    <string name="kap01_gram_tem1_rz18">kommt</string>
    <string name="mys">-&#8194;</string>
    <string name="kap12_gram_tem1">temporale Pr&#228;positionen im</string>
    <string name="kap12_gram_tem1_rz1">im + Monat / Jahreszeiten: im Oktober / Herbst</string>
    <string name="kap12_gram_tem2">Perfekt mit sein</string>
    <string name="kap12_gram_tem2_rz1">unregelm&#228;&#223;ig</string>
    <string name="kap12_gram_tem2_rz2">trennbar</string>
    <string name="kap12_gram_tem2_rz3">Verben</string>
    <string name="kap12_gram_tem2_rz4">gehen</string>
    <string name="kap12_gram_tem2_rz5">ankommen</string>
    <string name="kap12_gram_tem2_rz6">sein +</string>
    <string name="kap12_gram_tem2_rz7">er / sie ist</string>
    <string name="kap12_gram_tem2_rz8">Partizip &#8230;-en</string>
    <string name="kap12_gram_tem2_rz9">gegangen</string>
    <string name="kap12_gram_tem2_rz10">angekommen</string>
    <string name="kap12_kom_tem1">&#252;ber Reisen sprechen (Vergangenheit)</string>
    <string name="kap12_kom_tem1_rz1">Henry ist vor drei Monaten nach Deutschland / Hamburg gekommen.</string>
    <string name="kap12_kom_tem1_rz2">Letztes Jahr ist er nach M&#252;nchen / in die Schweiz geflogen.</string>
    <string name="kap12_kom_tem2">&#252;ber die Feste sprechen</string>
    <string name="kap12_kom_tem2_rz1">Das Fest hei&#223;t &#8230; / ist in &#8230; / hat &#8230; Besucher / dauert &#8230; / gibt es seit &#8230;</string>
    <string name="kap12_kom_tem2_rz2">Wir haben Musik geh&#246;rt, getanzt und viele nette Leute getroffen.</string>
    <string name="dativ">Dativ</string>
    <string name="akkus">Akkusativ</string>
    <string name="b11_kap03_gram_tem1">Relativpronomen und Relativsatz im Dativ</string>
    <string name="b11_kap03_gram_tem1_rz1">Das ist der Mann, dem ich geholfen habe.</string>
    <string name="b11_kap03_gram_tem1_rz2">Das ist das M&#228;dchen, dem ich geholfen habe.</string>
    <string name="b11_kap03_gram_tem1_rz3">Das ist die Dame, der ich geholfen habe.</string>
    <string name="b11_kap03_gram_tem1_rz4">Das sind die Kunden, denen ich geholfen habe.</string>
    <string name="b11_kap03_gram_tem2">Relativs&#228;tze im Akkusativ und Dativ mit Pr&#228;positionen</string>
    <string name="b11_kap03_gram_tem2_rz1">Durch die Fenster blickt man ins Gr&#252;ne.</string>
    <string name="b11_kap03_gram_tem2_rz2">Hier sind die Fenster, durch die man ins Gr&#252;ne blickt.</string>
    <string name="b11_kap03_gram_tem2_rz3">auch so: sich freuen auf, sich &#228;rgern &#252;ber, sprechen &#252;ber, Lust haben auf, sich interessieren f&#252;r, &#8230;</string>
    <string name="b11_kap03_gram_tem2_rz4">Ich sa&#223; an dem Ofen.</string>
    <string name="b11_kap03_gram_tem2_rz5">Das ist der Ofen, an dem ich sa&#223;.</string>
    <string name="b11_kap03_gram_tem2_rz6">auch so: tr&#228;umen von, sprechen mit, zufrieden sein mit, sitzen an, &#8230;</string>
    <string name="b11_kap03_kom_tem1">&#252;ber eine Statistik sprechen</string>
    <string name="b11_kap03_kom_tem1_rz1">Mehr mals / Gut / Rund / Etwa die H&#228;lfte von uns wohnt &#8230; .</string>
    <string name="b11_kap03_kom_tem1_rz6">Die meisten von uns / Fast alle haben einen Balkon. / keiner hat &#8230; .</string>
    <string name="b11_kap03_kom_tem1_rz5">Fast 80 Prozent / drei Viertel von uns wohnen auf &#8230; Wohnfl&#228;che.</string>
    <string name="b11_kap03_kom_tem1_rz4">Nur / Knapp ein Viertel von uns wohnt &#8230; .</string>
    <string name="b11_kap03_kom_tem1_rz3">In unserem Kurs gibt es f&#252;nf Personen, die in einer Eigentumswohnung leben. Das sind &#8230; Prozent.</string>
    <string name="b11_kap03_kom_tem1_rz2">Jeder zweite Teilnehmer wohnt &#8230; .</string>
</resources>